# Practise

./: README.md  connect_feibit_cloud.c
Application/: fock  fock.c  fork-and-exec  fork-and-exec.c  zombie  zombie.c
C/: auto  auto.c  hdump.c
C++/: c++.md  carrot.cpp  fun_ptr.cpp  inline.cpp  myfirst.cpp  ourfunc.cpp  test.c  test.cpp  use_new.cpp  vector.cpp
Link/: doublyLinkedList.c
Linux_Application/signal/: signal  signal.c
Linux_Network/: hello_client.c  hello_server  news_sender  uecho_client.c  uecho_server  uecho_server.c
Linux_Network/networkCard_ioctl/: BUILD.gn  ioctl_networkCard.c  tags
Linux_Network/networkCommon/: .networkCommon.c.swp
Lua/: Iterator.lua  error.lua  for.lua  function_test.lua  hello.lua  math.lua  repeat.lua  string.lua  table.lua  variable.lua  while.lua
Lua/CwithLua/: luaTest  luaTest.c  luaTest2  luaTest2.c  luaTest3  luaTest3.c  luaTest4  luaTest4.c  test.lua
Python/: list.py
RingBuffer/: RingBuffer.c
algorithm/:  quickSort.c  Binary_search  Binary_search.c  BubbleSort  BubbleSort.c  InsertionSort  InsertionSort.c  selectionSort  selectionSort.c  sum  sum.c
cmake/: README.md
cmake/HelloWorld/: CMakeLists.txt
cmake/config/: CMakeLists.txt
cmake/hello-headers/: CMakeLists.txt
cmake/subDir/: CmakeLists.txt
cmakeLearn/config/: config.h.in  main.c
cmakeLearn/staticLibrary/: CMakeLists.txt
cmakeLearn/subDir/: main.c
makefileDir/test16/: 1.mk  makefile  makefile.bak
netowrk/: hello_client  hello_server.c  news.txt  news_receiver_brd.c  news_sender.c  poll  poll.c  uecho_client  uecho_client.c
(+44 files in other folders)
